syntax = "proto3";

package proto.product.v1;

option go_package = "productservice/genproto/v1;productPBV1";

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "validate/validate.proto";

// ProductService Product 产品服务
service ProductService {
  rpc Create(CreateRequest) returns(google.protobuf.Empty){} // 添加产品
  rpc Update(UpdateRequest) returns(google.protobuf.Empty){} // 更新产品
  rpc Detail(DetailRequest) returns (Response){} // 获取产品详情
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty){} // 删除产品
  rpc List(ListRequest) returns (Response){} // 获取产品列表
  rpc DecreaseStock(DecreaseStockRequest) returns (google.protobuf.Empty){}// 减少库存操作
  rpc DecreaseStockRevert(DecreaseStockRequest) returns (google.protobuf.Empty){}// 减少库存操作
}

//*****************添加产品
message CreateRequest {
  string name = 1 [(validate.rules).string = {min_len: 1, max_len: 255}];
  float price = 2 [(validate.rules).float = {gte:1}];
  string desc = 3;
  string title = 4 [(validate.rules).string = {min_len:1;max_len:100}];
  int64 stock = 5 ;
  int64 isDisable = 6 [(validate.rules).int64 = {in:[1, 2]}];
}

//*****************更新产品
message UpdateRequest {
  int64 id = 1 [(validate.rules).int64 = {gte:1}];
  optional string name = 2 [(validate.rules).string = {max_len:255}];
  optional float price = 3;
  optional string desc = 4 [(validate.rules).string = {max_len:255}];
  optional string title = 5 [(validate.rules).string = {max_len:100}];
  optional int64 stock = 6;
  optional int64 isDisable = 7 [(validate.rules).int64 = {in:[1, 2]}];
}

//*****************删除产品
message DeleteRequest {
  int64 id = 1 [(validate.rules).int64 = {gte:1}];
}

//*****************获取产品详情
message DetailRequest {
  int64 id = 1 [(validate.rules).int64 = {gte:1}];
}

//*****************获取产品列表
message ListRequest {
  int64 page = 1;
  int64 pageSize = 2;
  string name = 3;
}

message ListResponse {
  int64 total = 1;
  repeated ProductDetail list = 2;
}


//*****************减少库存操作
message DecreaseStockRequest{
  //int64  id = 1 ;
  int64  id = 1 [json_name = "id", (validate.rules).int64 = {gte:1}];
  int64 quantity = 2[json_name = "quantity", (validate.rules).int64 = {gte:1}];
}

//*****************共用 message

// 分页参数
message Page {
  int64 page = 1;
  int64 pageSize = 2;
}

// 产品信息
message ProductDetail{
  int64  id = 1;
  string name = 2;
  float price = 3;
  string desc = 4;
  string title = 5;
  int64 stock = 6;
  int64  isDisable = 7;
  int64 createTime = 8;
  int64 updateTime = 9;
}

// http 返回数据
message Response {
  int64 code = 1;
  string msg = 2;
  google.protobuf.Any data = 3;
}