syntax = "proto3";

package proto.v1;

option go_package = "userservice/genproto/v1;userV1";

import "google/protobuf/empty.proto";
import "validate/validate.proto";

service UserService {
  rpc Register(RegisterRequest) returns(google.protobuf.Empty){}
  rpc Login(LoginRequest) returns (LoginResponse){}
  rpc Logout(google.protobuf.Empty) returns (google.protobuf.Empty){}
  rpc Info(google.protobuf.Empty) returns (InfoResponse){}
}

//*****************Register
message RegisterRequest {
  string username = 1 [(validate.rules).string = {
    pattern: "^[a-zA-Z0-9_]*$",
    min_len: 6,
    max_len: 16
  }
  ];
  string password = 2 [(validate.rules).string = {
    pattern: "^[a-zA-Z0-9]*$",
    min_len: 6,
    max_len: 16
  }];
}

message RegisterResponse {
  string result = 1;
}

//*****************Login
message LoginRequest {
  string username = 1 [(validate.rules).string = {min_len:1}];
  string password = 2 [(validate.rules).string = {min_len:1}];
}

message LoginResponse {
  string username = 1;
  string accessToken = 2;
  int64  expireIn = 3;
}

//*****************Info
message InfoResponse {
  string username = 1;
}
